--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -2,17 +2,33 @@
   width: fit-content;
   border-radius: 3px;
   background-color: #e2e7ea;
-  padding: 0.5rem 0.5rem;
+  padding-top: 0rem;
+  padding-right: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  max-height: 350px;
 }
 .table>:not(caption)>*>* {
   font-size: small;
   background-color: transparent;
   padding: 0.25rem 0.25rem;
 }
+tr:first-child {
+  position: sticky;
+  top: 0;
+  background-color: #e2e7ea;
+}
+tr:first-child > td {
+   padding-bottom: 10px;
+   padding-top: 10px;
+}
 .btn {
   --bs-btn-padding-x: 1em;
   --bs-btn-padding-y: 0.75em;
   --bs-btn-font-size: 0.75em;
+}
+.fa-copy {
+  color: #f2f2f2;
 }
 pre {
   background-color: #e2e7ea;
